[package]
name = "recloser"
version = "1.1.0"
authors = ["Romain Leroux <romain@leroux.dev>"]
edition = "2021"
description = "A concurrent circuit breaker implemented with ring buffers"
repository = "https://github.com/lerouxrgd/recloser"
license = "MIT"
readme = "README.md"

[dependencies]
crossbeam = "0.8"
pin-project = "1"

[dev-dependencies]
async-std = "1"
criterion = "0.3"
doc-comment = "0.3"
failsafe = "1"
fake_clock = "0.3"
num_cpus = "1"
rand = "0.8"
rayon = "1"

[[bench]]
name = "recloser"
harness = false