[package]
name = "recloser"
version = "1.1.1"
authors = ["Romain Leroux <romain@leroux.dev>"]
edition = "2021"
description = "A concurrent circuit breaker implemented with ring buffers"
repository = "https://github.com/lerouxrgd/recloser"
license = "MIT"
readme = "README.md"

[dependencies]
crossbeam-epoch = { version = "0.9", default-features = false, features = ["alloc"] }
pin-project = { version = "1", optional = true }

[features]
default = ["async"]
async = ["dep:pin-project"]

[dev-dependencies]
async-std = "1"
criterion = "0.5"
doc-comment = "0.3"
failsafe = "1"
fake_clock = "0.3"
num_cpus = "1"
rand = "0.8"
rayon = "1"

[[bench]]
name = "recloser"
harness = false
